fixes minor slide layout bugs

--- a/app/pages/Slide.css
+++ b/app/pages/Slide.css
@@ -95,6 +95,12 @@
       line-height: 1.3;
       white-space: pre-wrap;
 
+      /* override blueprint style for lists */
+      & ul,
+      & ol {
+        padding-left: 1.25rem;
+      }
+
       /* larger screens */
       @add-mixin min-sm {
         /* hide extra long text overflow */
@@ -339,6 +345,23 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
+  }
+
+
+  /* renderCode template */
+  & .renderCode {
+
+    /* prevents slide text from centering on small screens */
+    & .slide-text {
+      margin-left: 0;
+    }
+
+    /* prevents code-editor from breaking layout on medium-sized screens */
+    @add-mixin min-sm {
+      & .code-editor {
+      width: calc(100% - 300px);
+      }
+    }
   }
 
 
